--- a/green-yummy/src/main/resources/static/public/css/userLogin.css
+++ b/green-yummy/src/main/resources/static/public/css/userLogin.css
@@ -1,13 +1,13 @@
 main{
     display: flex;
     justify-content: center;
+    margin: 100px 0 100px 0;
 }
 .loginContainer{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 1280px;
-    height: 1000px;
 }
 .loginbox{
     display: flex;
@@ -15,26 +15,34 @@ main{
     justify-content: space-between;
     width: 640px;
     height: 250px;
+    padding: 20px;
+    
+    border: 1px solid black;
 }
 .loginforms{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
+table, tr, td{
+	border: 1px solid salmon;
+}
 .loginforms > table > td{
     padding: 10px;
 }
 input[type="text"]{
+	box-sizing: border-box;
     width: 300px;
     height: 50px;
+    padding: 10px;
     border: none;
-    background: lightgray;
+    background: #f2f2f2;
 }
 
 input[type="submit"]{
     float:right;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     cursor: pointer;
     background: salmon;
 }
