--- a/green-yummy/src/main/resources/static/public/css/userRegistChange.css
+++ b/green-yummy/src/main/resources/static/public/css/userRegistChange.css
@@ -10,7 +10,10 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 1280px;
+    
+    border: 1px solid red;
 
 }
 .tablecontainer{
@@ -23,6 +26,7 @@ table, tr, td{
 }
 table{
     width: 600px;
+    margin: 20px 0 0 0;
 }
 
 td:nth-child(1){
@@ -41,7 +45,12 @@ select{
     width: 320px;
     height: 30px;
     border: none;
-    background: lightgray;
+    outline: none;
+    background: #f2f2f2;
+}
+input[type="text"]{
+	box-sizing: border-box;
+	padding: 10px;
 }
 tr:nth-child(n+7) > 
 td:nth-child(2) > 
