--- a/green-yummy/src/main/resources/static/public/css/footer.css
+++ b/green-yummy/src/main/resources/static/public/css/footer.css
@@ -3,10 +3,13 @@ footer{
     justify-content: center;
     padding: 20px 0px 20px 50px;
     background: #f2f2f2;
-    border: 1px solid red;
 }
 .footcontainer{
     width: 1280px;
+}
+a{
+	color: black;
+	text-decoration: none;
 }
 .footnav{
     font: bold 16px "sans-serif";
