--- a/green-yummy/src/main/resources/static/user/css/userPage.css
+++ b/green-yummy/src/main/resources/static/user/css/userPage.css
@@ -1,4 +1,11 @@
-
+iframe{
+	width: 100%;
+	height: 100%;
+	border: 2px solid brown;
+}
+.youHere{
+	color: white;
+}
 
 main{
     display: flex;
@@ -13,9 +20,7 @@ main{
     padding: 10px;
     border: 2px solid skyblue;
 }
-.writeNumber{
-	border: 2px solid pink;
-}
+
 .forUser{
     display: flex;
     flex-direction: row;
@@ -42,12 +47,18 @@ input[type="button"]{
 .mypageTab{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     padding: 0px;
     width: 1280px;
     height: 50px;
     list-style-type: none;
+    font: normal bold 15pt 'sans-serif';
     
     border: 2px solid orange;
+    background: salmon;
+}
+.mypageTab > li{
+	cursor: pointer;
 }
 
 .modalContainer1,
