--- a/green-yummy/src/main/resources/static/public/css/Agreement.css
+++ b/green-yummy/src/main/resources/static/public/css/Agreement.css
@@ -15,17 +15,17 @@ main{
     padding: 20px;
     line-height: 3em;
     list-style-type: none;
-}
-.agreeCheck{
     width: 440px;
     height: 330px;
 
     border: 1px solid black;
 }
+
 .agreeBtns{
     border: 1px solid red;
 }
-input[type="button"]{
+input[type="button"],
+input[type="submit"]{
     width: 100px;
     height: 30px;
     border: none;
@@ -35,7 +35,8 @@ input[type="button"]{
     background: skyblue;
     color: white;
 }
-.agreeBtns > input[type="button"]{
+.agreeBtns > input[type="button"],
+input[type="submit"]{
     width: 100px;
     height: 50px;
     margin: 10px;
