findIdPswd css js

--- a/green-yummy/src/main/resources/static/public/css/findIdPassword.css
+++ b/green-yummy/src/main/resources/static/public/css/findIdPassword.css
@@ -1,17 +1,97 @@
+
+.findId, .findPswd{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-sizing: border-box;
+	width: 640px;
+	height: 300px;
+	padding: 40px;
+	
+	border: 1px solid pink;
+}
+.hidden{
+	display: none;
+} 
+.findIdPassCon > ul > .findThis{
+	color: white;
+	background: salmon;
+}
+
+
 main{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 100px 0 100px 0;
 }
 .innerContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 1280px;
+    padding: 20px;
+    
+    border: 1px solid skyblue;
 }
-.innerContainer > ul{
+.findIdPassCon{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 640px;
+	padding: 20px;
+	
+	border: 2px solid orange;
+}
+.findIdPassCon > ul{
     display: flex;
+    justify-content: center;
+    width: 640px;
+    height: 30px;
     padding: 0px;
     list-style-type: none;
+}
 
+.findIdPassCon > ul > li{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 320px;
+	padding: 20px 0px 20px 0px;
+	font: normal bold 15px 'sans-serif';
+	color: gray;
+	cursor: pointer;
+	background: #f2f2f2;
+	
+	border: 1px solid red;
+}
+
+input[type="text"]{
+	box-sizing: border-box;
+	width: 400px;
+	height: 40px;
+	border: none;
+	outline: none;
+	margin-top: 10px;
+	padding: 10px;
+	font-size: 14px;
+	background: #f2f2f2;
+}
+.findId > p{
+	font-size: 10pt;
+	color: red;
+}
+.findPswd > p{
+	font-size: 10pt;
+	color: gray;
+}
+input[type="submit"]{
+	width: 100px;
+	height: 50px;
+	margin: 20px 20px 0 20px;
+	border: none;
+	font-weight: bold;
+	background: salmon;
+	cursor: pointer;
 }
