--- a/green-yummy/src/main/resources/static/public/css/findIdPassword.css
+++ b/green-yummy/src/main/resources/static/public/css/findIdPassword.css
@@ -92,6 +92,7 @@ input[type="submit"]{
 	margin: 20px 20px 0 20px;
 	border: none;
 	font-weight: bold;
-	background: salmon;
+	color: white;
+	background: #000080;
 	cursor: pointer;
 }
