--- a/green-yummy/src/main/resources/static/public/css/pictureOCR.css
+++ b/green-yummy/src/main/resources/static/public/css/pictureOCR.css
@@ -11,12 +11,16 @@ main{
     align-items: center;
     width: 1280px;
 }
+
+/*OCR 설명란*/
 .OCRtitle{
     border: 1px solid black;
 }
 .OCRexplain{
     border: 1px solid black;
 }
+
+/*검색 결과란*/
 .OCRresult{
     display: flex;
     flex-direction: row;
@@ -38,6 +42,8 @@ input[type="button"]{
     border: onne;
     background: skyblue;
 }
+
+/*사진 삽입란*/
 .OCRsearch, input[type="file"]{
     width: 1000px;
     height: 600px;
@@ -57,6 +63,5 @@ input[type="file"]{
     align-items: center;
     margin-bottom: 100px;
     
-    background: lemonchiffon;
 }
 
