--- a/green-yummy/src/main/resources/static/user/css/storeCollection.css
+++ b/green-yummy/src/main/resources/static/user/css/storeCollection.css
@@ -16,17 +16,19 @@ main{
 	position: fixed;
 	top: 0;
 	
-	width: 1280px;
-	height: 640px;
+	width: 960px;
+	height: 430px;
 }
 .userContentCon{
 	position: relative;
 	z-index: 10;
 	width: 1280px;
-	margin: 540px;
+	margin: 540px 0px 0px 0px;
 	
 	border: 2px solid blue;
 }
+
+/*필터 셀렉트 모여 있는 바*/
 .filterContainer{
 	width: 1280px;
 	height: 50px;
@@ -35,8 +37,21 @@ main{
 	border: 2px solid red;
 }
 select{
+	height: 50px;
+	padding: 10px;
+	font: normal bold 12pt 'sans-serif';
+	cursor: pointer;
+	border: none;
 	outline: none;
 }
+.filterContainer > img{
+	float: right;
+	margin: 3px 5px 0 5px;
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+}
+
 .viewLook{
 	float: right;
 }
