--- a/green-yummy/src/main/resources/static/user/css/reviewList.css
+++ b/green-yummy/src/main/resources/static/user/css/reviewList.css
@@ -3,7 +3,7 @@ main{
     justify-content: center;
     align-items: center;
 }
-.innerContainer{
+.reviewContainer{
     display: flex;
     justify-content: center;
     align-items: center;
