--- a/green-yummy/src/main/resources/static/user/css/shopApply.css
+++ b/green-yummy/src/main/resources/static/user/css/shopApply.css
@@ -1,1 +1,55 @@
 @charset "utf-8";
+
+main{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 100px 0 100px 0;
+}
+.mainContainer{
+	display: flex;
+	justify-content: center;
+	width: 1280px;
+}
+form{
+	padding: 30px;
+	border-radius: 10px;
+	border: 2px solid lightgray;
+}
+table, tr, th, td{
+	border: 1px solid turquoise;
+}
+table{
+	width: 600px;
+	margin: 30px;
+}
+input[type="text"]{
+	box-sizing: border-box;
+	width: 400px;
+	padding: 10px;
+	border: none;
+	outline: none;
+	background: #f2f2f2;
+}
+th, td{
+	padding: 10px;
+}
+th{
+	width: 150px;
+	text-align: center;
+	font: normal bold 13pt 'sans-serif';
+}
+.shopApplyBtns{
+	display: flex;
+	justify-content: center;
+}
+input[type="submit"],
+input[type="reset"]{
+	width: 150px;
+	height: 50px;
+	margin: 10px;
+	cursor: pointer;
+	font: normal bold 13pt 'sans-serif';
+	border: none;
+	background: salmon;
+}
