--- a/green-yummy/src/main/resources/static/user/css/userPage.css
+++ b/green-yummy/src/main/resources/static/user/css/userPage.css
@@ -98,6 +98,7 @@ main{
     justify-content: center;
     align-items: center;
     position: fixed;
+    z-index: 10;
     width: 100%;
     height: 100%;
     top: 0;
