--- a/green-yummy/src/main/resources/static/public/css/serviceIntro.css
+++ b/green-yummy/src/main/resources/static/public/css/serviceIntro.css
@@ -4,14 +4,43 @@
 	display:flex;	
 	justify-content: center; 
     align-items: center;
+    margin: 100px 0 100px 0;
+    
+    border: 2px solid lightgray;
 }
 
 .MainContainer{
 	display: flex;
+	flex-direction: column;
 	width: 1280px;
 	justify-content: center; 
     align-items: center;
 }
 .introBox{
+	margin: 20px;
 	border: 2px solid salmon;
+}
+.threeWays .introBox{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 1280px;
+	height: 400px;
+}
+.introText{
+	width: 700px;
+	margin: 0 0 0 30px;
+	
+	border: 1px solid black;
+}
+.introText p{
+	font: normal bold 15pt 'sans-serif';
+}
+.imgPlace{
+	float: left;
+	width: 300px;
+	height: 300px;
+	margin: 0 0 0 40px;
+	
+	border: 2px solid gray;
 }
