--- a/green-yummy/src/main/resources/static/index/css/indexRecommand.css
+++ b/green-yummy/src/main/resources/static/index/css/indexRecommand.css
@@ -2,7 +2,7 @@
 
 .recommandCon{
     width: 1280px;
-	overflow: hidden;
+/* 	overflow: hidden; */
 	border: 2px solid turquoise;
 }
 
@@ -25,17 +25,16 @@
 
 .recommandList > li{
 	position: relative;
-/* 	left: -330px; */
     display: flex; 
     flex-direction: column; 
-    width: 300px; 
+    width: 380px; 
     height: 400px; 
     border: 1px solid gray; 
-    margin: 0 30px 0 30px;
+    margin: 0 20px 0 20px;
 }
 
 .recommandImg{
-    width: 300px; 
+    width: 380px; 
     height: 300px; 
     background-color: lightgray; 
 }
