--- a/green-yummy/src/main/resources/static/user/css/createReview.css
+++ b/green-yummy/src/main/resources/static/user/css/createReview.css
@@ -1,11 +1,66 @@
 
+fieldset, 
+.reviewBtn, 
+.reviewContent{
+	width: 960px;
+}
+
+form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	
+	border-radius: 8px;
+	border: 2px solid gray;
+}
+form > p{
+	font: normal bold 15pt 'sans-serif';
+}
+.reviewBtn{
+	border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    margin:15px;
+}
+
+.checkDiv1, .checkDiv2{
+	display: flex;
+	flex-direction: column;
+}
+.storePhoto{
+	padding: 20px;
+	
+}
+.storePhoto img{
+	width: 200px;
+	height: 200px;
+	cursor: pointer;
+	opacity: 0.5;
+}
+textarea{
+	outline: none;
+}
+input[type="file"]{
+	display: none;
+	
+}
+
+
+
+
 main{
     display: flex;
     justify-content: center;
+    margin: 100px 0 100px 0;
 }
 .reviewContainer{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
     width: 1280px;
     height: 1000px;
+    
 }
 
 .rateSelect {
@@ -13,13 +68,20 @@ main{
     border-radius: 8px;
     padding: 10px;
     margin:15px;
+    
+    text-align: center;
 }
-
+legend{
+	text-align: left;
+}
 .keywordSelect {
+	display: flex;
+	justify-content: space-evenly;
 	border: 2px solid #ccc;
     border-radius: 8px;
     padding: 10px;
     margin:15px;
+    line-height: 2em;
 }
 
 .reviewContent {
@@ -27,13 +89,14 @@ main{
     border-radius: 8px;
     padding: 10px;
     margin:15px;
-    width: 90%;
 }
 
 input[type="submit"]{
     width: 100px;
     height: 50px;
-    margin-top: 20px;
-    font-weight: bold;
+    margin: 20px 0 20px 0;
+    font: normal bold 10pt 'sans-serif';
+    cursor: pointer;
+    border: none;
     background: salmon;
 }
