--- a/green-yummy/src/main/resources/static/user/css/reviewList.css
+++ b/green-yummy/src/main/resources/static/user/css/reviewList.css
@@ -16,8 +16,13 @@ table{
 	width: 100%;
 }
 table, tr, td{
+	white-space: nowrap;
 	overflow: hidden;
+	text-overflow: ellipsis;
     border: 1px solid green;
+}
+tr:nth-of-type(2), td:nth-of-type(2){
+	display: block;
 }
 td:nth-of-type(3){
 	padding-left: 10px;
@@ -27,14 +32,15 @@ td:not(:nth-of-type(3)){
 	text-align: center;
 }
 td:nth-of-type(even), 
-td:last-child, 
-td:first-child{
+td:last-child{
 	width: 80px;
+}
+td:first-child, td:nth-of-type(4){
+	width: 50px;
 }
 td:nth-of-type(5){
 	width: 150px;
 }
-
 tr:first-child > td{
 	padding: 10px 0 10px 0;
     font-weight: bold;
