--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -1,17 +1,21 @@
 @charset "UTF-8";
 .outContainer {
+	flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     display: flex;
     
     margin: 100px 0 100px 0;
 }
 .innerContainer{
+	display: flex;
+    flex-direction: column;
 	width: 1280px;
     justify-content: center;
+    align-items: center;
     text-align: center;
-    display: flex;
-    flex-direction: column;
+    
     
 	/* border: 1px solid salmon; */
 }
@@ -19,35 +23,75 @@
 
 
 /* 검색 부분 */
+
 .searchContainer{
+	position: relative;
 	display: flex;
 	justify-content: center;
+	width: 100%;
 	height: 50px;
-	/* background: skyblue; */
-	border: 1px solid skyblue;
+	padding: 10px;
+}
+.searchContainer::before{
+	content:"";
+	background: #f2f2f2;
+	position: absolute;
+	z-index: -5;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+.ocricon{
+	position: relative;
+	top: -3px;
+	width: 50px;
+	height: 50px;
+	border: 4px solid gray;
+	border-radius: 5px;
+	background: white;
+}
+.ocricon img{
+	width: 50px;
+	height: 50px;
+	cursor: pointer;
 }
 .searchBar {
 	box-sizing: border-box;
-    width: 500px;
+    width: 800px;
     height: 50px;
     display: inline-block; 
     outline: none;
-    padding: 10px;
+    border-radius: 50px;
+    border: 2px solid salmon;
+    padding: 10px 10px 10px 20px;
+    background: white;
     
     /* border: 1px solid brown; */
 }
-.customSearchBtn, .OCRBtn {
+.customSearchBtn, .OCRBtn{
     width: 50px;
     height: 50px;
     display: inline-block; 
     cursor: pointer; 
 }
+.customSearchBtn img {
+	position: relative;
+	top: 3px;
+	left: -2px;
+	width: 40px;
+	height: 40px;
+}
+.customSearchBtn{
+	position: relative;
+	left: -50px;
+	border-radius: 0 50px 50px 0;
+}
 .OCRBtn{
 	margin-left: 20px;
 }
 .customSearchBtn{
-	background: red;
-	opacity: 0.5;
+	background: salmon;
 }
 
 /* 카테고리 부분 */
@@ -121,14 +165,14 @@
 	height: 100px;
 	cursor: pointer;
 	
-	background: rgba(65, 33, 21, 0.5);
+/* 	background: rgba(65, 33, 21, 0.5); */
 }
 
 .mainPrevBtn{
 	top: 320px;
-	left: -100px;
+	left: -690px;
 }
 .mainNextBtn{
 	top: -320px;
-	left: 1280px;
+	left: 690px;
 }
