--- a/green-yummy/src/main/resources/static/public/css/header.css
+++ b/green-yummy/src/main/resources/static/public/css/header.css
@@ -1,6 +1,8 @@
 header{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-top: 4px solid salmon;
     border-bottom: 4px solid salmon;
 	background: white;
@@ -24,4 +26,31 @@ header{
 .loginplace a{
 	margin-right: 40px;
 	font: normal bold 15pt 'sans-serif';
+}
+
+
+/* 카테고리 부분 */
+.category {
+    list-style: none;
+    display: flex; 
+    justify-content: center; 
+    padding: 10px 0 10px 0;
+	margin: 0 0 10px 0;
+    
+	background: salmon;
+    /* border: 1px solid brown; */
+}
+.category li {
+	width: 200px;
+    padding: 10px; 
+    text-align: center;
+	font: normal bold 15pt 'sans-serif';
+	border-radius: 50px;
+	cursor: pointer;
+	color: white;
+}
+.category li:hover{
+	color: black;
+	background: lemonchiffon;
+	transition: background 300ms ease-in-out;
 }
