--- a/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
@@ -115,11 +115,11 @@
     max-width: 1200px; 
     margin: 0 auto;
     padding: 20px; 
-    box-sizing: border-box; /* 패딩과 테두리를 너비에 포함 */
-    overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능 */
-    border: 1px solid #ddd; /* 테두리 추가 (선택 사항) */
-    border-radius: 5px; /* 둥근 테두리 (선택 사항) */
-    background-color: #f9f9f9; /* 배경 색상 (선택 사항) */
+    box-sizing: border-box;
+    overflow-y: auto;
+    border: 1px solid #ddd; 
+    border-radius: 5px; 
+    background-color: #f9f9f9;
 }
 
 .review {
@@ -127,3 +127,54 @@
     flex-direction: column;
     align-items: center;
 }
+
+.review-img {
+	width:100px;
+	
+}
+.review-img-container {
+	border:1px solid black;
+}
+.reviews-table {
+	border : 1px solid black;
+	width:90%;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.4); /* Black background with opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.review-detail-img {
+	width:300px;
+}
+
