--- a/green-yummy/src/main/resources/static/user/css/createReview.css
+++ b/green-yummy/src/main/resources/static/user/css/createReview.css
@@ -1,10 +1,16 @@
 
+
+
+main{
+    display: flex;
+    justify-content: center;
+    margin: 100px 0 100px 0;
+}
 fieldset, 
 .reviewBtn, 
 .reviewContent{
 	width: 960px;
 }
-
 form{
 	display: flex;
 	flex-direction: column;
@@ -17,43 +23,6 @@ form{
 form > p{
 	font: normal bold 15pt 'sans-serif';
 }
-.reviewBtn{
-	border: 2px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    margin:15px;
-}
-
-.checkDiv1, .checkDiv2{
-	display: flex;
-	flex-direction: column;
-}
-.storePhoto{
-	padding: 20px;
-	
-}
-.storePhoto img{
-	width: 200px;
-	height: 200px;
-	cursor: pointer;
-	opacity: 0.5;
-}
-textarea{
-	outline: none;
-}
-input[type="file"]{
-	display: none;
-	
-}
-
-
-
-
-main{
-    display: flex;
-    justify-content: center;
-    margin: 100px 0 100px 0;
-}
 .reviewContainer{
 	display: flex;
 	flex-direction: column;
@@ -62,7 +31,6 @@ main{
     height: 1000px;
     
 }
-
 .rateSelect {
 	border: 2px solid #ccc;
     border-radius: 8px;
@@ -74,6 +42,26 @@ main{
 legend{
 	text-align: left;
 }
+.rateSelect img{
+	width: 190px;
+	height: 35px;
+}
+.rateSelect img:not(:nth-of-type(3)){
+	display: none;
+}
+
+.reviewBtn{
+	border: 2px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    margin:15px;
+}
+
+.checkDiv1, .checkDiv2{
+	display: flex;
+	flex-direction: column;
+}
+
 .keywordSelect {
 	display: flex;
 	justify-content: space-evenly;
@@ -89,8 +77,22 @@ legend{
     border-radius: 8px;
     padding: 10px;
     margin:15px;
+    outline: none;
 }
-
+.storePhoto{
+	padding: 20px;
+	
+}
+.storePhoto img{
+	width: 200px;
+	height: 200px;
+	cursor: pointer;
+	opacity: 0.5;
+}
+input[type="file"]{
+	display: none;
+	
+}
 input[type="submit"]{
     width: 100px;
     height: 50px;
