--- a/green-yummy/src/main/resources/static/user/css/shopApply.css
+++ b/green-yummy/src/main/resources/static/user/css/shopApply.css
@@ -25,8 +25,13 @@ table{
 	border-collapse: collapse;
 	margin: 30px;
 }
-table img{
+table img,
+.photoPlace{
+	width: 185px;
+	height: 185px;
 	cursor: pointer;
+}
+#addPhoto{
 	opacity: 0.5;
 }
 td, th{
@@ -54,7 +59,7 @@ input[type="text"]{
 	outline: none;
 	background: #f2f2f2;
 }
-input[type="file"]{
+.hidden{
 	display: none;
 }
 .shopApplyBtns{
