리뷰 업데이트 수정

--- a/green-yummy/src/main/resources/static/user/css/updateReview.css
+++ b/green-yummy/src/main/resources/static/user/css/updateReview.css
@@ -86,10 +86,14 @@ legend{
 	cursor: pointer;
 	opacity: 0.5;
 }
+
+
+
+/*파일 업로드 버튼 보이게 설정했음 -sg*/
 input[type="file"]{
-	display: none;
-	
+
 }
+
 input[type="submit"]{
     width: 100px;
     height: 50px;
